Adding updates to the Admin tool:
Manual Story page
Story list
Refined RSS Feed functionality

--- a/apps/admin/views/layouts/main.twig
+++ b/apps/admin/views/layouts/main.twig
@@ -24,6 +24,12 @@
                     <li>
                         <a href="/rss" class="active"><i class="fa fa-rss fa-fw"></i> RSS Feeds</a>
                     </li>
+                    <li>
+                        <a href="/blog" class="active"><i class="fa fa-pencil-square-o fa-fw"></i> Create New Story</a>
+                    </li>
+                    <li>
+                        <a href="/storylist" class="active"><i class="fa fa-list fa-fw"></i> Story List</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
