--- a/apps/admin/views/rss/index.twig
+++ b/apps/admin/views/rss/index.twig
@@ -1,4 +1,6 @@
-{{ set(this, 'title', 'Gossip 24/7 Admin RSS Feed') }}
+{{ set(this, 'title', 'Gossip 24/7 Admin - RSS Feed') }}
+{{ this.registerJsFile('/js/jquery.min.js') }}
+{{ this.registerJsFile('/js/page-scripts/rss-feed-scripts.js') }}
 <div class="row">
 	<div class="col-lg-3">
 		<div class="panel panel-primary">
