--- a/apps/admin/views/site/index.twig
+++ b/apps/admin/views/site/index.twig
@@ -1,4 +1,4 @@
-{{ set(this, 'title', 'Gossip 24/7 Admin Home') }}
+{{ set(this, 'title', 'Gossip 24/7 Admin - Home') }}
 <div class="row">
 	<p style="font-size: 30px;" class="text-center"><strong>Pick from the bottons below or use the navigation on the left to get started.</strong></p>
 	<!-- RSS Block -->
@@ -9,7 +9,7 @@
 	            	<div class="col-xs-6">
 	              	<i class="fa fa-rss fa-5x"></i>
 	            	</div>
-	            	<div id="feedback-title" class="col-xs-6 text-right">
+	            	<div class="col-xs-6 text-right">
 	              	  	<p class="task-title">RSS Feeds</p>
 	            	</div>
 	        	</div>
@@ -29,4 +29,62 @@
 	    </div>
 	</div>
     <!-- End RSS Block -->
+
+    <!-- New Story Block -->
+	<div class="col-lg-3">
+        <div class="panel panel-info">
+	      	<div class="panel-heading">
+	        	<div class="row">
+	            	<div class="col-xs-6">
+	              	<i class="fa fa-pencil-square-o fa-5x"></i>
+	            	</div>
+	            	<div class="col-xs-6 text-right">
+	              	  	<p class="task-title">New Story</p>
+	            	</div>
+	        	</div>
+	      	</div>
+	      	<a href="/blog">
+	        	<div class="panel-footer announcement-bottom">
+	            	<div class="row">
+		              	<div class="col-xs-6">
+		               		Create New Story
+		              	</div>
+		              	<div class="col-xs-6 text-right">
+		                	<i class="fa fa-arrow-circle-right"></i>
+		              	</div>
+	            	</div>
+	        	</div>
+	      	</a>
+	    </div>
+	</div>
+    <!-- End New Story Block -->
+
+    <!-- Story List Block -->
+	<div class="col-lg-3">
+        <div class="panel panel-info">
+	      	<div class="panel-heading">
+	        	<div class="row">
+	            	<div class="col-xs-6">
+	              	<i class="fa fa-list fa-5x"></i>
+	            	</div>
+	            	<div class="col-xs-6 text-right">
+	              	  	<p class="task-title">Story List</p>
+	            	</div>
+	        	</div>
+	      	</div>
+	      	<a href="/storylist">
+	        	<div class="panel-footer announcement-bottom">
+	            	<div class="row">
+		              	<div class="col-xs-6">
+		               		View/Edit Stories
+		              	</div>
+		              	<div class="col-xs-6 text-right">
+		                	<i class="fa fa-arrow-circle-right"></i>
+		              	</div>
+	            	</div>
+	        	</div>
+	      	</a>
+	    </div>
+	</div>
+    <!-- End Story List Block -->
 </div>
