--- a/apps/admin/views/site/index.twig
+++ b/apps/admin/views/site/index.twig
@@ -87,4 +87,33 @@
 	    </div>
 	</div>
     <!-- End Story List Block -->
+
+    <!-- Media Block -->
+	<div class="col-lg-3">
+        <div class="panel panel-info">
+	      	<div class="panel-heading">
+	        	<div class="row">
+	            	<div class="col-xs-6">
+	              	<i class="fa fa-camera fa-5x"></i>
+	            	</div>
+	            	<div class="col-xs-6 text-right">
+	              	  	<p class="task-title">Media</p>
+	            	</div>
+	        	</div>
+	      	</div>
+	      	<a href="/media">
+	        	<div class="panel-footer announcement-bottom">
+	            	<div class="row">
+		              	<div class="col-xs-6">
+		               		Add Media
+		              	</div>
+		              	<div class="col-xs-6 text-right">
+		                	<i class="fa fa-arrow-circle-right"></i>
+		              	</div>
+	            	</div>
+	        	</div>
+	      	</a>
+	    </div>
+	</div>
+    <!-- End Media Block -->
 </div>
