--- a/apps/admin/views/storylist/story_list.twig
+++ b/apps/admin/views/storylist/story_list.twig
@@ -1,17 +1,20 @@
 {% if story_list %}
 	<div class="panel-group" id="accordion" aria-multiselectable="true" role="tablist">
 		{% for entry in story_list %}
-			<div data-story="{{entry.story_id}}" class="panel panel-default">
+			<div data-story="{{entry.story_id}}" class="panel {{ entry.story_type == "SPOTLIGHT" ? "panel-green" : "panel-default" }}">
 		        <div id="heading-{{loop.index}}" role="tab" class="panel-heading">
-		          	<div class="col-lg-9">
+		          	<div class="col-lg-6">
 		          		<h4 class="panel-title">
 			            	<a aria-controls="collapse-{{entry.story_id}}" aria-expanded="false" href="#collapse-{{entry.story_id}}" data-parent="#accordion" data-toggle="collapse" role="button">
-			              		{{entry.title}}
+			            		<label for="title">Title:</label> {{ entry.title|length > 50 ? entry.title|slice(0, 50) ~ '...' : entry.title  }}
 			            	</a>
 			            </h4>
 			        </div>
+			        <div class="col-lg-3 story_date">
+						<label for="date">Date:</label> {{ entry.story_date != "" ? entry.story_date : "N/A" }}
+					</div>
 					<div class="col-lg-2">
-						<label for="priority">Priority:</label> <input type="number" data-story="{{entry.story_id}}" data-storypid="{{entry.story_priority_id}}" value="{{entry.priority}}" min="0" class="form-control" name="priority" placeholder="Enter Priority" />
+						<label for="priority">Priority:</label> <input type="number" data-story="{{entry.story_id}}" data-storypid="{{entry.storyPriority.story_priority_id}}" value="{{entry.storyPriority.priority}}" min="0" max="30" class="form-control" name="priority" placeholder="Enter Priority" />
 					</div>
 					<div class="col-lg-1">
 		            	<button data-story="{{entry.story_id}}" data-visible="{{entry.visible}}">
@@ -22,11 +25,11 @@
 		        <div aria-labelledby="heading-{{entry.story_id}}" role="tabpanel" class="panel-collapse collapse" id="collapse-{{entry.story_id}}">
 		          	<div class="panel-body">
 		            	<div class="row">
-							<div class="col-lg-3">
+							<div class="col-lg-4">
 								<label for="title">Title</label><br />
 								<input class="form-control" name="title" value="{{entry.title}}" placeholder="Enter your title here" />
 							</div>
-							<div class="col-lg-3">
+							<div class="col-lg-4">
 								<label for="story_type">Story Type</label><br />
 								<select class="form-control" name="story_type">
 									<option value="FEATURED" {{ entry.story_type == "FEATURED" ? "selected" : "" }}>Featured Story</option>
@@ -34,13 +37,9 @@
 									<option value="SIDE" {{ entry.story_type == "SIDE" ? "selected" : "" }}>Side Story</option>
 								</select>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-lg-4">
 								<label for="link">Link</label><br />
-								<input class="form-control" name="link" value="{{ entry.link == "N/A" ? "http://www.gossip247.com/blog/" ~ entry.story_id : entry.link }}" placeholder="Enter your link here" />
-							</div>
-							<div class="col-lg-3">
-								<label for="date">Date</label><br />
-								<input class="form-control" name="date" value="{{entry.story_date}}" placeholder="Enter your date here" />
+								<input class="form-control" name="link" value="{{ entry.link }}" placeholder="Enter your link here" />
 							</div>
 						</div>
 						<div class="clear"><br /></div>
