--- a/apps/admin/views/rss/rss_feed_entries.twig
+++ b/apps/admin/views/rss/rss_feed_entries.twig
@@ -16,7 +16,7 @@
 					<label for="story_type">Story Type</label><br />
 					<select class="form-control" name="story_type">
 						<option value="FEATURED">Featured Story</option>
-						<option value="SPOTLIGHT">Main Story</option>
+						<option value="SPOTLIGHT">Spotlight Story</option>
 						<option value="SIDE">Side Story</option>
 					</select>
 				</div>
