--- a/apps/admin/views/storylist/index.twig
+++ b/apps/admin/views/storylist/index.twig
@@ -9,7 +9,7 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-12" id="story_list">
 						{% include "story_list.twig" %}
 					</div>
 				</div>
