--- a/apps/admin/views/storylist/index.twig
+++ b/apps/admin/views/storylist/index.twig
@@ -5,6 +5,53 @@
 	<div class="col-lg-12">
 		<div class="panel panel-primary">
 			<div class="panel-heading">
+				<h3 class="panel-title">Story Filter</h3>
+			</div>
+			<div class="panel-body">
+				<div class="col-md-3">
+					<label>Story Type</label><br />
+					<div data-sorttype="story_type" class="btn-group">
+						<button class="btn btn-default" data-sortorder="SPOTLIGHT" data-sorttype="story_type">SPOTLIGHT</button>
+						<button class="btn btn-default" data-sortorder="FEATURED" data-sorttype="story_type">FEATURED</button>
+						<button class="btn btn-default" data-sortorder="SIDE" data-sorttype="story_type">SIDE</button>
+					</div>
+				</div>
+				<div class="col-md-2">
+					<label>Priority</label><br />
+					<div data-sorttype="priority" class="btn-group">
+						<button class="btn btn-default" data-sortorder="SORT_ASC" data-sorttype="priority">HIGHEST</button>
+						<button class="btn btn-default" data-sortorder="SORT_DESC" data-sorttype="priority">LOWEST</button>
+					</div>
+				</div>
+				<div class="col-md-2">
+					<label>Publish Date</label><br />
+					<div data-sorttype="story_date" class="btn-group">
+						<button class="btn btn-default" data-sortorder="SORT_DESC" data-sorttype="story_date">LATEST</button>
+						<button class="btn btn-default" data-sortorder="SORT_ASC" data-sorttype="story_date">EARLIEST</button>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<label>Publish</label><br />
+					<div data-sorttype="visibility" class="btn-group">
+						<button class="btn btn-default" data-sortorder="1" data-sorttype="visibility">PUBLISHED</button>
+						<button class="btn btn-default" data-sortorder="0" data-sorttype="visibility">UNPUBLISHED</button>
+					</div>
+				</div>
+				<div class="col-md-2">
+					<label>Run Filters</label><br />
+					<div class="btn-group">
+						<button class="btn btn-success" name="refresh">SUBMIT</button>
+						<button class="btn btn-danger" name="reset">RESET</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-12">
+		<div class="panel panel-primary">
+			<div class="panel-heading">
 				<h3 class="panel-title">Story List</h3>
 			</div>
 			<div class="panel-body">
