Uploading changes from story type to story size. Updating the frontend site format.

--- a/apps/admin/views/blog/index.twig
+++ b/apps/admin/views/blog/index.twig
@@ -9,17 +9,22 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
-					<div class="col-lg-6">
+					<div class="col-lg-4">
 						<label for="title">Title</label><br />
 						<input class="form-control" name="title" placeholder="Enter your title here" />
 					</div>
-					<div class="col-lg-6">
-						<label for="story_type">Story Type</label><br />
-						<select class="form-control" name="story_type">
-							<option value="FEATURED">Featured Story</option>
-							<option value="SPOTLIGHT">Spotlight Story</option>
-							<option value="SIDE">Side Story</option>
+					<div class="col-lg-4">
+						<label for="story_type">Story Size</label><br />
+						<select class="form-control" name="story_size">
+							<option value="1">Main Story</option>
+							<option value="2">Featured Story - Horizontal</option>
+							<option value="3">Featured Story - Vertical</option>
+							<option value="4">Side Story</option>
 						</select>
+					</div>
+					<div class="col-lg-4">
+						<label for="link">Link</label><br />
+						<input class="form-control" name="link" value="" placeholder="Enter your link here" />
 					</div>
 				</div>
 				<div class="clear"><br /></div>
