--- a/apps/admin/views/rss/rss_feed_entries.twig
+++ b/apps/admin/views/rss/rss_feed_entries.twig
@@ -13,11 +13,12 @@
 				</div>
 				<div class="clear"><br /></div>
 				<div>
-					<label for="story_type">Story Type</label><br />
-					<select class="form-control" name="story_type">
-						<option value="FEATURED">Featured Story</option>
-						<option value="SPOTLIGHT">Spotlight Story</option>
-						<option value="SIDE">Side Story</option>
+					<label for="story_type">Story Size</label><br />
+					<select class="form-control" name="story_size">
+						<option value="1">Main Story</option>
+						<option value="2">Featured Story - Horizontal</option>
+						<option value="3">Featured Story - Vertical</option>
+						<option value="4">Side Story</option>
 					</select>
 				</div>
 			</div>
