--- a/apps/admin/views/storylist/index.twig
+++ b/apps/admin/views/storylist/index.twig
@@ -9,11 +9,12 @@
 			</div>
 			<div class="panel-body">
 				<div class="col-md-3">
-					<label>Story Type</label><br />
-					<div data-sorttype="story_type" class="btn-group">
-						<button class="btn btn-default" data-sortorder="SPOTLIGHT" data-sorttype="story_type">SPOTLIGHT</button>
-						<button class="btn btn-default" data-sortorder="FEATURED" data-sorttype="story_type">FEATURED</button>
-						<button class="btn btn-default" data-sortorder="SIDE" data-sorttype="story_type">SIDE</button>
+					<label>Story Size</label><br />
+					<div data-sorttype="story_size" class="btn-group">
+						<button class="btn btn-default" data-sortorder="1" data-sorttype="story_size">MAIN</button>
+						<button class="btn btn-default" data-sortorder="2" data-sorttype="story_size">FEATURED - H</button>
+						<button class="btn btn-default" data-sortorder="3" data-sorttype="story_size">FEATURED - V</button>
+						<button class="btn btn-default" data-sortorder="4" data-sorttype="story_size">SIDE</button>
 					</div>
 				</div>
 				<div class="col-md-2">
