--- a/apps/admin/views/storylist/story_list.twig
+++ b/apps/admin/views/storylist/story_list.twig
@@ -2,10 +2,12 @@
 	<div class="panel-group" id="accordion" aria-multiselectable="true" role="tablist">
 		{% for entry in story_list %}
 			<div data-storypid="{{entry.storyPriority.story_priority_id}}" data-story="{{entry.story_id}}" class="panel 
-				{% if entry.story_type == "SPOTLIGHT" %}
+				{% if entry.story_size == 1 %}
 					panel-green
-				{% elseif entry.story_type == "FEATURED" %}
+				{% elseif entry.story_size == 2 %}
 					panel-info
+				{% elseif entry.story_size == 3 %}
+					panel-warning
 				{% else %}
 					panel-default
 				{% endif %}
@@ -30,21 +32,31 @@
 		        <div aria-labelledby="heading-{{entry.story_id}}" role="tabpanel" class="panel-collapse collapse" id="collapse-{{entry.story_id}}">
 		          	<div class="panel-body">
 		            	<div class="row">
-							<div class="col-lg-4">
+							<div class="col-lg-3">
 								<label for="title">Title</label><br />
 								<input class="form-control" name="title" value="{{entry.title}}" placeholder="Enter your title here" />
 							</div>
-							<div class="col-lg-4">
-								<label for="story_type">Story Type</label><br />
-								<select class="form-control" name="story_type">
-									<option value="FEATURED" {{ entry.story_type == "FEATURED" ? "selected" : "" }}>Featured Story</option>
-									<option value="SPOTLIGHT" {{ entry.story_type == "SPOTLIGHT" ? "selected" : "" }}>Spotlight Story</option>
-									<option value="SIDE" {{ entry.story_type == "SIDE" ? "selected" : "" }}>Side Story</option>
+							<div class="col-lg-3">
+								<label for="story_size">Story Size</label><br />
+								<select class="form-control" name="story_size">
+									<option value="1" {{ entry.story_size == 1 ? "selected" : "" }}>Main Story</option>
+									<option value="2" {{ entry.story_size == 2 ? "selected" : "" }}>Featured Story - Horizontal</option>
+									<option value="3" {{ entry.story_size == 3 ? "selected" : "" }}>Featured Story - Vertical</option>
+									<option value="4" {{ entry.story_size == 4 ? "selected" : "" }}>Side Story</option>
 								</select>
 							</div>
-							<div class="col-lg-4">
+							<div class="col-lg-3">
 								<label for="link">Link</label><br />
 								<input class="form-control" name="link" value="{{ entry.link }}" placeholder="Enter your link here" />
+							</div>
+							<div class="col-lg-3">
+								<label for="show_desc">Show description?</label><br />
+								<label class="radio-inline">
+                                    <input type="radio" {{ entry.show_desc ? 'checked' : "" }} value="1" name="show_desc_{{ entry.story_id }}"> Yes
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" {{ entry.show_desc ? "" : 'checked' }} value="0" name="show_desc_{{ entry.story_id }}"> No
+                                </label>
 							</div>
 						</div>
 						<div class="clear"><br /></div>
