--- a/apps/staging/views/layouts/main.twig
+++ b/apps/staging/views/layouts/main.twig
@@ -13,7 +13,7 @@
 <body>
 {{ this.beginBody() }}
 
-    <div class="container">
+    <div class="container" style="max-width: 960px;">
         {{ content | raw }}
     </div>
 
