Long overdue commit, I am not sure what the changes have been since. Most likely stylistic fixes.

--- a/apps/admin/views/layouts/login.twig
+++ b/apps/admin/views/layouts/login.twig
@@ -11,17 +11,16 @@
     {{ this.head() }}
 </head>
 <style>
-	body {
-		background: #fff;
-	}
+    #page-wrapper{
+        margin: 0;
+        height: 700px;
+    }
 </style>
 <body>
 {{ this.beginBody() }}
-
-    <div class="container" style="max-width: 960px;">
+    <div id="page-wrapper">
         {{ content | raw }}
     </div>
-
 {{ this.endBody() }}
 </body>
 </html>
