--- a/apps/admin/views/layouts/main.twig
+++ b/apps/admin/views/layouts/main.twig
@@ -33,6 +33,12 @@
                     <li>
                         <a href="/media" class="active"><i class="fa fa-camera fa-fw"></i> Media</a>
                     </li>
+                    <li>
+                        <a href="/users" class="active"><i class="fa fa-users fa-fw"></i> Manage Users</a>
+                    </li>
+                    <li>
+                        <a href="/logout" class="active"><i class="fa fa-sign-out fa-fw"></i> Sign Out</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.sidebar-collapse -->
