--- a/apps/staging/views/site/index.twig
+++ b/apps/staging/views/site/index.twig
@@ -3,17 +3,17 @@
 body {
 	background: #fff;
 }
-h3 {
-	color: #064eb2;
+h3, h4 {
+	color: #203eda;
 	font-weight: bold;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
-h3 a.title:link {
-	color: #064eb2;
+h3 a.title:link, h3 a.title:visited, h4 a.title:link, h4 a.title:visited {
+	color: #203eda;
 }
-h3 a.title:hover {
-	color: #cf0000;
+h3 a.title:hover, h4 a.title:hover {
+	color: #dd0000;
 }
 #site-header {
 	padding-top: 10px;
@@ -26,6 +26,9 @@ h3 a.title:hover {
 }
 .world-news-grid {
 	width: 30%;
+}
+.world-news-grid a {
+	text-transform: none;
 }
 .world-news-grid img {
 	width: 50%;
@@ -66,7 +69,7 @@ h3 a.title:hover {
 	{% if main_story %}
 		<div class="main-content">		
 			<div class="col-lg-12 total-news">
-				<h3><a href="{{ main_story.link }}" class="title" target="_blank">{{ main_story.title }}</a></h3>
+				<h3><a href="{{ main_story.link }}" class="title" target="_blank">{{ main_story.title|raw }}</a></h3>
 				<div class="clearfix"></div>
 				<div class="conference-slider">
 					{% for image in main_story.storyImage %}
@@ -86,7 +89,7 @@ h3 a.title:hover {
 	{% if story_list %}
 		<div class="col-lg-12" style="padding: 0;">
 			{% if story_list.featured_list|length > 0 and story_list.side_list|length > 0 %}
-				<div class="col-md-9">
+				<div class="col-md-9" style="padding-left: 0;">
 					<div class="world-news">
 						{% for story in story_list.featured_list %}
 							<div class="world-news-grids">
@@ -94,7 +97,7 @@ h3 a.title:hover {
 								{% if story.featured_list_h|length > 0 %}
 									{% for story_h in story.featured_list_h %}
 										<div class="world-news-grid-midsize">
-											<h3><a href="{{ story_h.link }}" target="_blank" class="title">{{ story_h.title }}</a></h3>
+											<h3><a href="{{ story_h.link }}" target="_blank" class="title">{{ story_h.title|raw }}</a></h3>
 											<div>
 												{% for image in story_h.storyImage %}
 													{% if loop.index < 3 %}
@@ -114,7 +117,7 @@ h3 a.title:hover {
 								{% if story.featured_list_v|length > 0 %}
 									{% for story_v in story.featured_list_v %}
 										<div class="world-news-grid">
-											<h3><a href="{{ story_v.link }}" target="_blank" class="title">{{ story_v.title }}</a></h3>
+											<h4><a href="{{ story_v.link }}" target="_blank" class="title">{{ story_v.title|raw }}</a></h4>
 											<div>
 												{% for image in story_v.storyImage %}
 													{% if image.order == 0 %}
@@ -137,12 +140,12 @@ h3 a.title:hover {
 					<div class="clearfix"></div>
 				</div>
 
-				<div class="col-md-3" style="padding-left: 5px;">
+				<div class="col-md-3" style="padding: 0; padding-left: 5px;">
 					<div class="world-news-grids">
 						{% for side_story in story_list.side_list %}
 							<!-- starting side story ROW {{loop.index}} -->
 							<div class="world-news-side">
-								<h3><a href="{{ side_story.link }}" target="_blank" class="title">{{ side_story.title }}</a></h3>
+								<h4><a href="{{ side_story.link }}" target="_blank" class="title">{{ side_story.title|raw }}</a></h4>
 								<div>
 									{% for image in side_story.storyImage %}
 										{% if image.order == 0 %}
@@ -168,7 +171,7 @@ h3 a.title:hover {
 							{% if story.featured_list_h|length > 0 %}
 								{% for story_h in story.featured_list_h %}
 									<div class="world-news-grid-midsize">
-										<h3><a href="{{ story_h.link }}" target="_blank" class="title">{{ story_h.title }}</a></h3>
+										<h3><a href="{{ story_h.link }}" target="_blank" class="title">{{ story_h.title|raw }}</a></h3>
 										<div>
 											{% for image in story_h.storyImage %}
 												{% if loop.index < 3 %}
@@ -188,7 +191,7 @@ h3 a.title:hover {
 							{% if story.featured_list_v|length > 0 %}
 								{% for story_v in story.featured_list_v %}
 									<div class="world-news-grid">
-										<h3><a href="{{ story_v.link }}" target="_blank" class="title">{{ story_v.title }}</a></h3>
+										<h4><a href="{{ story_v.link }}" target="_blank" class="title">{{ story_v.title|raw }}</a></h4>
 										<div>
 											{% for image in story_v.storyImage %}
 												{% if image.order == 0 %}
@@ -218,7 +221,7 @@ h3 a.title:hover {
 						{% for side_story in story_list.side_list %}
 							<!-- starting side story ROW {{loop.index}} -->
 							<div class="world-news-grid">
-								<h3><a href="{{ side_story.link }}" target="_blank" class="title">{{ side_story.title }}</a></h3>
+								<h4><a href="{{ side_story.link }}" target="_blank" class="title">{{ side_story.title|raw }}</a></h4>
 								<div>
 									{% for image in side_story.storyImage %}
 										{% if image.order == 0 %}
