Updates to the blog pages and staging home page CSS

--- a/apps/admin/views/blog/index.twig
+++ b/apps/admin/views/blog/index.twig
@@ -20,6 +20,7 @@
 							<option value="2">Featured Story - Horizontal</option>
 							<option value="3">Featured Story - Vertical</option>
 							<option value="4">Side Story</option>
+							<option value="5">Advertisement</option>
 						</select>
 					</div>
 					<div class="col-lg-4">
