--- a/apps/admin/views/storylist/index.twig
+++ b/apps/admin/views/storylist/index.twig
@@ -8,13 +8,14 @@
 				<h3 class="panel-title">Story Filter</h3>
 			</div>
 			<div class="panel-body">
-				<div class="col-md-3">
+				<div class="col-md-4">
 					<label>Story Size</label><br />
 					<div data-sorttype="story_size" class="btn-group">
 						<button class="btn btn-default" data-sortorder="1" data-sorttype="story_size">MAIN</button>
 						<button class="btn btn-default" data-sortorder="2" data-sorttype="story_size">FEATURED - H</button>
 						<button class="btn btn-default" data-sortorder="3" data-sorttype="story_size">FEATURED - V</button>
 						<button class="btn btn-default" data-sortorder="4" data-sorttype="story_size">SIDE</button>
+						<button class="btn btn-default" data-sortorder="5" data-sorttype="story_size">AD</button>
 					</div>
 				</div>
 				<div class="col-md-2">
@@ -31,7 +32,7 @@
 						<button class="btn btn-default" data-sortorder="SORT_ASC" data-sorttype="story_date">EARLIEST</button>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-2">
 					<label>Publish</label><br />
 					<div data-sorttype="visibility" class="btn-group">
 						<button class="btn btn-default" data-sortorder="1" data-sorttype="visibility">PUBLISHED</button>
