--- a/apps/staging/views/layouts/main.twig
+++ b/apps/staging/views/layouts/main.twig
@@ -18,7 +18,7 @@
 <body>
 {{ this.beginBody() }}
 
-    <div class="container" style="max-width: 960px;">
+    <div id="mainContainer" class="container" style="max-width: 960px; padding: 0;">
         {{ content | raw }}
     </div>
 
