--- a/apps/staging/web/css/style.css
+++ b/apps/staging/web/css/style.css
@@ -51,7 +51,7 @@ label{
 /*-----start-header----*/
 .news-paper {
 	background:#fff;
-	padding:1em 1.5em;
+	padding:1em 0;
 	margin:5em 0;
 }
 .header-left {
